<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"

    tools:context=".SignInActivity">





        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:paddingLeft="10dp"
            android:paddingRight="8dp"
            android:background="@drawable/background"
            android:orientation="vertical">

            <ImageView
                android:layout_width="210dp"
                android:layout_height="250dp"
                android:layout_gravity="end|top"
                android:layout_marginBottom="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/inverted_stethecope"
                android:translationZ="2dp"></ImageView>


            <TextView
                android:id="@+id/Login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Login"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/welcome_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Welcome User!"
                android:textColor="@color/white"

                android:textSize="25dp"></TextView>


        </androidx.appcompat.widget.LinearLayoutCompat>

       <androidx.appcompat.widget.LinearLayoutCompat
           android:layout_width="match_parent"
           android:layout_gravity="center"
           android:gravity="center"
           android:layout_height="match_parent"
           android:orientation="vertical">

           <ViewFlipper
               android:id="@+id/viewflipper"
               android:paddingLeft="10dp"
               android:paddingRight="10dp"
               android:layout_gravity="center"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">


               <androidx.appcompat.widget.LinearLayoutCompat
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:orientation="vertical">

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signin_username"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/username_hint"
                           android:textSize="16dp">

                       </com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp"
                       app:endIconMode="password_toggle">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signin_password"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/password_hint"
                           android:inputType="textPassword"
                           android:textSize="16dp"></com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <Button
                       android:id="@+id/login_button"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:layout_marginBottom="5dp"
                       android:backgroundTint="#098EF8"
                       android:text="@string/login"
                       android:textColor="@color/white"
                       android:textSize="18dp"></Button>


                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="2dp"
                       android:gravity="center_horizontal|center_vertical"
                       android:orientation="horizontal"
                       android:weightSum="10">

                       <View
                           android:layout_width="0dp"
                           android:layout_height="1dp"
                           android:layout_weight="4"
                           android:background="@color/black"></View>

                       <TextView
                           android:layout_width="0dp"
                           android:layout_height="wrap_content"
                           android:layout_weight="1"
                           android:text="@string/or"
                           android:textAlignment="center"
                           android:textSize="14dp"></TextView>

                       <View
                           android:layout_width="0dp"
                           android:layout_height="1dp"
                           android:layout_weight="4"
                           android:background="@color/black"></View>
                   </androidx.appcompat.widget.LinearLayoutCompat>


                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:id="@+id/signin_with_google"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:layout_marginBottom="5dp"
                       android:clickable="true"
                       android:elevation="5dp"
                       android:gravity="center"
                       android:orientation="horizontal"
                       android:padding="5dp">

                       <ImageView
                           android:layout_width="50dp"
                           android:layout_height="50dp"

                           android:background="@color/white"
                           android:backgroundTint="@android:color/transparent"
                           android:padding="5dp"
                           android:scaleType="centerInside"
                           android:src="@drawable/google_logo"></ImageView>

                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:text="@string/sign_in_with_google"
                           android:textAlignment="center"
                           android:textSize="20dp"></TextView>
                   </androidx.appcompat.widget.LinearLayoutCompat>

                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:orientation="horizontal">


                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:alpha="0.8"
                           android:text="@string/new_user"
                           android:textSize="14dp"></TextView>

                       <TextView
                           android:id="@+id/signup_text"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:alpha="1"
                           android:clickable="true"
                           android:text="@string/signup"
                           android:textColor="#00B0FF"
                           android:textSize="14dp"
                           android:textStyle="bold"></TextView>
                   </androidx.appcompat.widget.LinearLayoutCompat>
               </androidx.appcompat.widget.LinearLayoutCompat>
               <androidx.appcompat.widget.LinearLayoutCompat
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:orientation="vertical">


                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signup_username"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/Email_hint"
                           android:imeOptions="actionNext"
                           android:inputType="text"
                           android:nextFocusForward="@id/signup_email"
                           android:textSize="16dp"></com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signup_email"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/username_hint"
                           android:imeOptions="actionNext"
                           android:inputType="text"
                           android:nextFocusForward="@id/signup_password"
                           android:textSize="16dp"></com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp"
                       app:endIconMode="password_toggle">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signup_password"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/password_hint"
                           android:imeOptions="actionNext"
                           android:inputType="textPassword"
                           android:nextFocusForward="@id/signup_confirmpassword"
                           android:textSize="16dp"></com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <com.google.android.material.textfield.TextInputLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginBottom="5dp"
                       app:endIconMode="password_toggle">

                       <com.google.android.material.textfield.TextInputEditText
                           android:id="@+id/signup_confirmpassword"
                           android:layout_width="match_parent"
                           android:layout_height="match_parent"
                           android:hint="@string/confirm_password_hint"
                           android:imeOptions="actionDone"
                           android:inputType="textPassword"
                           android:textSize="16dp"></com.google.android.material.textfield.TextInputEditText>
                   </com.google.android.material.textfield.TextInputLayout>

                   <Button
                       android:id="@+id/signup_button"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="5dp"
                       android:layout_marginBottom="5dp"
                       android:backgroundTint="#098EF8"
                       android:text="@string/signup"
                       android:textColor="@color/white"
                       android:textSize="18dp"></Button>


                   <androidx.appcompat.widget.LinearLayoutCompat
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       android:orientation="horizontal">


                       <TextView
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:alpha="0.8"
                           android:text="@string/Existing_user"
                           android:textSize="14dp"></TextView>

                       <TextView
                           android:id="@+id/signin_text"
                           android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:alpha="1"
                           android:clickable="true"
                           android:text="@string/signin"
                           android:textColor="#00B0FF"
                           android:textSize="14dp"
                           android:textStyle="bold"></TextView>
                   </androidx.appcompat.widget.LinearLayoutCompat>
               </androidx.appcompat.widget.LinearLayoutCompat>


           </ViewFlipper>
       </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>